  - Enhancement  #455 Split HD Category into 720p and 1080p
  - Enhancement  #462 Enable/disable Year and Certification rating in index page of all skins. New skin-options.xsl file.
  - Enhancement  #465 Play All link at beginning of playlist instead of end
  - Fixed defect #475 Correctly display index pages when mjb.nbThumbnailsPerLine=1
  - Enhancement  #507 Properties can be overridden at the command line
  - Fixed defect #565 FilmAffinity ID ignored
  - Fixed defect #581 gfb skin's links to genres from movie details pages were broken for filtered genres
  - Fixed defect #586 Reverse sort order ignored for sd, gfb107, and gfb107-sd skins
  - Enhancement  #631 Ability to limit number of Apple trailers per movie
  - Fixed defect #636 (Regression) Check for file-based subtitles
  - Fixed defect #644 Directory fanart not found on POSIX systems
  - Fixed defect #645 IMDB plots with embedded HTML tags are now parsed correctly
  - Fixed defect #649 Manually decode some Cp1251 values that Kinopoisk uses &#xxx; entities for
  - Enhancement  #650 Get writer information from IMDB
  - Fixed defect #651 Recognize single-character titles when scanning filenames
  - Fixed defect #656 Recognize DVDR as a synonym for DVDRip
  - Fixed defect #659 Create "Dual Language" Icon
  - Fixed defect #662 FilmDeltaSEPlugin can't handle "illegal HTML characters"
  - Fixed defect #666 Can't connect to IMDB behind authenticated proxy
  - Fixed defect #667 Can't download image behind authenticated proxy
  - Fixed defect #668 Can't connect to TheTVDB behind authenticated proxy
  - Fixed defect #670 BD structure in excluded directory causes exception
  - Enhancement  #671 Option to create posters for set masters
  - Fixed defect #673 Sets no longer appear on categories.html page
  - Enhancement  #675 (Default skin only for now) Play all files in a set by highlighting the set and pressing "play" button on remote
  - Fixed defect #676 MovieMeterPlugin: problem when no movie duration is available