@@ -193,6 +193,9 @@ mjb.subtitles.ExcludeFilesWithoutExternal=false
 # Flag for selecting download of the movie trailers (true), or streaming over the internet (false)
 #appletrailers.download=false
 #appletrailers.max=0
+# This parameter should contain the trailer types you want to download.
+# Examples are: tlr, tsr, clip
+#appletrailers.trailertype=tlr,tsr
 
 ################################################################
 ## Web Proxy Support
